@@ -2,6 +2,7 @@
  * ID3: 
    * Support for the iTunes non-standard TSO2 and TSOC frames.
    * Fix a bug in ID3v2.4 footer flag detection, (#5)
+ * MP4: Don't fail or double-encode UTF-8 strings when given a str.
  * EasyID3: Extension API for defining new "easy" tags at runtime.
  * EasyMP4: Like EasyID3, but for iTunes MPEG-4 files.
  * mutagen.File: New 'easy=True' argument to create new EasyMP3, EasyMP4,
